tests/fixtures/invalid/missing_yes_edge.mmd
flowchart TD
    Start --> A{x > 0?}
    A -->|No| End
